--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,5 @@
 deploy.ant.properties.file=C:\\Users\\Marcelo\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
 j2ee.server.home=G:/Marcelo/ITS/apache-tomcat-8.5.73
 j2ee.server.instance=tomcat80:home=G:\\Marcelo\\ITS\\apache-tomcat-8.5.73
-selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
+selected.browser=Chrome
 user.properties.file=C:\\Users\\Marcelo\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
